<resources>
    <string name="app_name">Ayuda Perritos Chile</string>
    <string name="completa_tus_datos">Completa tus datos</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="ingrese_rut_sin_puntos">Ingrese rut sin puntos</string>
    <string name="ingrese_email">Ingrese Email</string>
    <string name="ingrese_contrase_a">Ingrese Contraseña</string>
    <string name="confirmar_registro">Confirmar registro</string>
    <string name="volver_a_login">Volver a login</string>
    <string name="login">Login</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrarse">Registrarse</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="informa_para_ayudar">Informa para ayudar</string>
    <string name="subir_foto_perfil">Subir Foto Perfil</string>
    <string name="cargar_imagen">Cargar Imagen</string>
    <string name="titulo">Titulo</string>
    <string name="descripci_n">Descripción</string>
    <string name="describe_detalladamente_aqu">Describe detalladamente aquí</string>
    <string name="ingresa_titulo">Ingresa Titulo</string>
    <string name="subir_informaci_n">Subir Información</string>
    <string name="volver_al_inicio">Volver al inicio</string>
</resources>